complete approve functionality in customer portal

--- a/src/app/view-customer-service-order/view-customer-service-order.component.css
+++ b/src/app/view-customer-service-order/view-customer-service-order.component.css
@@ -70,3 +70,9 @@
   border-width: 2px;
   border-color: rgb(0,62,83);
 }
+.approveSelectedBtn {
+  margin-right: 5px;
+}
+.declineBtn {
+  margin-right: 5px;
+}
