--- a/src/app/service-order/service-order.component.html
+++ b/src/app/service-order/service-order.component.html
@@ -1,39 +1,44 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1 class="text-center">Enter Service Order</h1>
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-        <label for="cusFirstName">First Name:</label>
-        <input type="text" id="cusFirstName" class="form-control" ngModel name="cusFirstName" required>
-        <label for="cusLastName">Last Name:</label>
-        <input type="text" id="cusLastName" class="form-control" ngModel name="cusLastName" required>
-        <label for="cusPhoneNumber">Phone Number:</label>
-        <input type="text" id="cusPhoneNumber" class="form-control" ngModel name="cusPhoneNumber" required>
-        <label for="cusEmail">Email:</label>
-        <input type="email" id="cusEmail" class="form-control" ngModel name="cusEmail" required email>
-        <label for="cusCarVin">VIN:</label>
-        <input type="text" id="cusCarVin" class="form-control" ngModel name="cusCarVin" required>
-        <label for="cusCarMake">Make:</label>
-        <input type="text" id="cusCarMake" class="form-control" ngModel name="cusCarMake" required>
-        <label for="cusCarModel">Model:</label>
-        <input type="text" id="cusCarModel" class="form-control" ngModel name="cusCarModel" required>
-        <label for="cusCarYear">Year:</label>
-        <input type="text" id="cusCarYear" class="form-control" ngModel name="cusCarYear" required>
-        <label for="cusService">Service:</label>
-        <select type="text" id="cusCarServiceOne" class="form-control" [(ngModel)]="cusCarServiceOne" name="cusCarServiceOne" required>
-          <option *ngFor="let service of cusCarServiceArray" value='{"type":"{{service.type}}","price":"{{service.price}}","desc":"{{service.desc}}","status":"pending"}'>{{service.type}}</option>
-        </select>
-        <button class="btn" type="button" (click)="addServiceField()">Add Service</button>
-        <div id="appendItemDiv"></div>
-        <label for="cusAttendant">Assigned To:</label>
-        <input type="text" id="cusAttendant" class="form-control" ngModel name="cusAttendant" required>
-
-        <button class="btn" type="submit" [disabled]="!f.valid">Submit Order</button>
-
-        <div *ngIf="successMessage != ''">
-          <div class="alert alert-success">{{successMessage}}<div><button type="button" class="btn btn-success" routerLink="/servicedashboard">Current Orders</button></div></div>
-        </div>
-      </form>
+      <div class="card defaultCardStyle">
+        <h1 class="text-center headerFont"><strong>Enter Service Order</strong></h1>
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+          <label for="cusFirstName">First Name:</label>
+          <input type="text" id="cusFirstName" class="form-control" ngModel name="cusFirstName" required>
+          <label for="cusLastName">Last Name:</label>
+          <input type="text" id="cusLastName" class="form-control" ngModel name="cusLastName" required>
+          <label for="cusPhoneNumber">Phone Number:</label>
+          <input type="text" id="cusPhoneNumber" class="form-control" ngModel name="cusPhoneNumber" required>
+          <label for="cusEmail">Email:</label>
+          <input type="email" id="cusEmail" class="form-control" ngModel name="cusEmail" required email>
+          <label for="cusCarVin">VIN:</label>
+          <input type="text" id="cusCarVin" class="form-control" ngModel name="cusCarVin" required>
+          <label for="cusCarMake">Make:</label>
+          <input type="text" id="cusCarMake" class="form-control" ngModel name="cusCarMake" required>
+          <label for="cusCarModel">Model:</label>
+          <input type="text" id="cusCarModel" class="form-control" ngModel name="cusCarModel" required>
+          <label for="cusCarYear">Year:</label>
+          <input type="text" id="cusCarYear" class="form-control" ngModel name="cusCarYear" required>
+          <label for="serviceAttendant">Assigned To:</label>
+          <select type="text" id="serviceAttendant" class="form-control" ngModel name="cusAttendant" required>
+            <option *ngFor="let employee of allEmployeesArray" value="{{employee}}">{{employee}}</option>
+          </select>
+          <label for="cusService">Service:</label>
+          <select type="text" id="cusCarServiceOne" class="form-control" [(ngModel)]="cusCarServiceOne" name="cusCarServiceOne" required>
+            <option *ngFor="let service of cusCarServiceArray" value='{"type":"{{service.type}}","price":"{{service.price}}","desc":"{{service.desc}}","status":"pending"}'>{{service.type}}</option>
+          </select>
+          <button class="btn btn-link btn-sm" type="button" (click)="addServiceField()">Another Service</button>
+          <div id="appendItemDiv"></div>
+          <button class="btn btn-dark btnMargin" type="submit" [disabled]="!f.valid">Submit Order</button>
+          <div *ngIf="successMessage != ''">
+            <div class="alert alert-success btnSmallMargin" >{{successMessage}}<div><button type="button" class="btn btn-success btnSmallMargin" routerLink="/servicedashboard">Current Orders</button></div></div>
+          </div>
+          <div *ngIf="errorMsg != ''">
+            <div class="alert alert-danger btnSmallMargin">{{errorMsg}}</div>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
