--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -1,46 +1,56 @@
-<h1>
-    Sign Up Customer</h1>
+<div class="card defaultCardStyle">
+  <h1 class="headerFont text-center"><strong>Sign Up Customer</strong></h1>
 
-<form (ngSubmit)='onSubmit(s)' #s='ngForm'>
+  <form (ngSubmit)='onSubmit(s)' #s='ngForm'>
 
-    <div class='form-group'>
-        <label for="fName">First Name:</label>
-        <input id='fName' type="text" class='form-control' ngModel name='fName' required [(ngModel)]='s.fName' #fName='ngModel'>
-        <div *ngIf="fName.invalid && (fName.dirty || fName.touched)" class="alert alert-danger">
-            <div *ngIf="fName.errors.required"> First Name is required.</div>
-        </div>
-    </div>
-    <div class='form-group'>
-    <label for="lName">Last Name:</label>
-    <input type="text" id='lName' class='form-control' ngModel name='lName' required required [(ngModel)]='s.lName' #lName='ngModel'>
-    <div *ngIf="lName.invalid && (lName.dirty || lName.touched)" class="alert alert-danger">
-        <div *ngIf="lName.errors.required"> Last Name is required.</div>
-    </div>
-    </div>
-    <label for="phNumber">Phone Number:</label>
-    <input type="text" id='phNumber' class='form-control' ngModel name='phNumber' required>
+      <div class='form-group'>
+          <label for="fName">First Name:</label>
+          <input id='fName' type="text" class='form-control' ngModel name='fName' required [(ngModel)]='s.fName' #fName='ngModel'>
+          <div *ngIf="fName.invalid && (fName.dirty || fName.touched)" class="alert alert-danger">
+              <div *ngIf="fName.errors.required"> First Name is required.</div>
+          </div>
+      </div>
+      <div class='form-group'>
+      <label for="lName">Last Name:</label>
+      <input type="text" id='lName' class='form-control' ngModel name='lName' required [(ngModel)]='s.lName' #lName='ngModel'>
+      <div *ngIf="lName.invalid && (lName.dirty || lName.touched)" class="alert alert-danger">
+          <div *ngIf="lName.errors.required"> Last Name is required.</div>
+      </div>
+      </div>
+      <div class='form-group'>
+        <label for="phNumber">Phone Number:</label>
+        <input type="text" id='phNumber' class='form-control' ngModel name='phNumber'>
+      </div>
+      <div class='form-group'>
+        <label for="email">Email address:</label>
+        <input type="email" id='email' class='form-control' ngModel name='email'>
+      </div>
+      <div class='form-group'>
+        <label for="make">Make:</label>
+        <input type="text" id='make' class='form-control' ngModel name='make'>
+      </div>
+      <div class='form-group'>
+        <label for="model">Model:</label>
+        <input type="text" id='model' class='form-control' ngModel name='model'>
+      </div>
+      <div class='form-group'>
+        <label for="vin">VIN:</label>
+        <input type="text" id='vin' class='form-control' ngModel name='vin'>
+      </div>
+      <div class='form-group'>
+        <label for="year">Year:</label>
+        <input type="text" id='year' class='form-control' ngModel name='year'>
+      </div>
+      <div class='form-group'>
+        <label for="engine">Engine:</label>
+        <input type="text" id='engine' class='form-control' ngModel name='engine'>
+      </div>
+      <div class='form-group'>
+        <label for="tire">Tire:</label>
+        <input type="text" id='tire' class='form-control' ngModel name='tire'>
+      </div>
 
-    <label for="email">Email address:</label>
-    <input type="email" id='email' class='form-control' ngModel name='email'>
+      <button type='submit' class="btn btn-primary btnMargin" [disabled]='s.invalid'>Submit</button>
 
-    <label for="make">Make:</label>
-    <input type="text" id='make' class='form-control' ngModel name='make'>
-
-    <label for="model">Model:</label>
-    <input type="text" id='model' class='form-control' ngModel name='model'>
-
-    <label for="vin">VIN:</label>
-    <input type="text" id='vin' class='form-control' ngModel name='vin'>
-
-    <label for="year">Year:</label>
-    <input type="text" id='year' class='form-control' ngModel name='year'>
-
-    <label for="engine">Engine:</label>
-    <input type="text" id='engine' class='form-control' ngModel name='engine'>
-
-    <label for="tire">Tire:</label>
-    <input type="text" id='tire' class='form-control' ngModel name='tire'>
-
-    <button type='submit' class="btn " [disabled]='s.invalid'>Submit</button>
-
-</form>
+  </form>
+</div>
