--- a/src/styles.css
+++ b/src/styles.css
@@ -26,12 +26,11 @@ html {
   padding: 15px;
   margin: 0 auto;
 }
-.btn {
-  background-color: #FFFFFF;
-  color: #000000;
-  border: #000000;
-  margin-top: 1rem;
+
+.headerFont{
+  font-family: 'PT Serif', serif;
 }
+
 
 /* .form-signin .form-control {
   position: relative;
