--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -29,7 +29,7 @@
   <div class="col-md-4">
     <div class="card rowMargin cardPadding hoverStyle createserviceorder" routerLink="/createserviceorder">
       <div class="card-body">
-        <h4 class="card-title text-center cardHeader">Create a Service Order</h4>
+        <h4 class="card-title text-center cardHeader"><div>Create a </div>Service Order</h4>
       </div>
     </div>
   </div>
@@ -38,14 +38,14 @@
   <div class="col-md-4">
     <div class="card rowMargin cardPadding hoverStyle servicedashboard" routerLink="/servicedashboard">
       <div class="card-body">
-        <h4 class="card-title text-center cardHeader">View Service Dashboard</h4>
+        <h4 class="card-title text-center cardHeader"><div>View Service</div> Dashboard</h4>
       </div>
     </div>
   </div>
   <div class="col-md-4">
     <div class="card rowMargin usersignup cardPadding hoverStyle" routerLink="/usersignup">
       <div class="card-body">
-        <h4 class="card-title text-center cardHeader">Employee User Sign Up</h4>
+        <h4 class="card-title text-center cardHeader"><div>Employee</div> Sign Up</h4>
       </div>
     </div>
   </div>
