--- a/src/app/add-service/add-service.component.html
+++ b/src/app/add-service/add-service.component.html
@@ -1,55 +1,31 @@
-<h1>Add a Service</h1>
+<div class="row">
+  <div class="col"></div>
+  <div class="col-md-8">
+    <div class="card defaultCardStyle">
+      <h1 class='text-center headerFont'><strong>Add a Service</strong></h1>
+      <form (ngSubmit)='onSubmit(f); f.resetForm()'  #f='ngForm'>
+          <div class="form-group">
+            <label for='type'><strong>Type:</strong></label>
+            <input id='type' type="text" class='form-control' ngModel name='type' required>
+          </div>
 
-<form (ngSubmit)='onSubmit(f); f.resetForm()'  #f='ngForm'>
-  
-    <div class="form-group">
-      <label for='type'>Type</label>
-      <input id='type' type="text" class='form-control' ngModel name='type' required minlength="3" [(ngModel)]='f.type' #type='ngModel'>
-
-      <div *ngIf="type.invalid && (type.dirty || type.touched)" class="alert alert-danger">
-
-        <div *ngIf="type.errors.required">
-          Type is required.
-        </div>
-        <div *ngIf="type.errors.minlength">
-          Type must be at least 3 characters long.
-        </div>
-      </div>
+          <div class="form-group">
+            <label><strong>Price:</strong></label>
+            <input class='form-control' type="number" ngModel name='price' required>
+          </div>
+          <div class="form-group">
+            <label><strong>Description:</strong></label>
+            <input class='form-control' type="text" ngModel required name='desc'>
+          </div>
+          <button type='submit' class="btn btn-success" [disabled]='f.invalid'>Submit</button>
+          <div class="alert alert-success btnSmallMargin" *ngIf="serviceAdded">
+            <p>Service has been added</p>
+          </div>
+          <div *ngIf="serverMessage != ''">
+            <div class="alert alert-danger btnSmallMargin">{{serverMessage}}</div>
+          </div>
+      </form>
     </div>
-
-    <div class="form-group">
-      <label>Price</label>
-      <input class='form-control' type="number" ngModel name='price' required [(ngModel)]='f.price' #price='ngModel'>
-      <div *ngIf="price.invalid && (price.dirty || price.touched)" class="alert alert-danger">
-
-        <div *ngIf="price.errors.required">
-          Price is required.
-        </div>
-
-      </div>
-    </div>
-    <div class="form-group">
-      <label>Description</label>
-      <input class='form-control' type="text" ngModel required name='desc' [(ngModel)]='f.desc' #desc='ngModel'>
-      <div *ngIf="desc.invalid && (desc.dirty || desc.touched)" class="alert alert-danger">
-
-        <div *ngIf="desc.errors.required">
-          Description is required.
-        </div>
-
-      </div>
-    </div>
-
-    <button type='submit' class="btn btn-success" [disabled]='f.invalid'>Submit</button>
-    <div class="service-sumitted" *ngIf="f.sumbitted">
-      <p>Service has been added</p>
-    </div>
-    <div *ngIf="serverMessage != ''">
-      <div class="alert alert-danger">{{serverMessage}}</div>
-    </div>
-  
-
-
-</form>
-
-
+  </div>
+  <div class="col"></div>
+</div>
