--- a/src/app/employee-sign-in/employee-sign-in.component.html
+++ b/src/app/employee-sign-in/employee-sign-in.component.html
@@ -1,13 +1,22 @@
-<form class="form-signin" (ngSubmit)="onSubmit(f)" #f="ngForm">
-  <h2 class="form-signin-heading">Please sign in</h2>
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" ngModel name="email" class="form-control" placeholder="Email address" required autofocus>
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" ngModel name="password" class="form-control" placeholder="Password" required>
-  <div class="checkbox">
-    <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
+<div class="container">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col-md-4">
+      <div class="card defaultCardStyle">
+        <h2 class="text-center headerFont"><strong>Please sign in</strong></h2>
+        <form class="form-signin" (ngSubmit)="onSubmit(f)" #f="ngForm">
+          <div class="form-group">
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" ngModel name="email" class="form-control" placeholder="Email address" required autofocus>
+          </div>
+          <div class="form-group">
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" ngModel name="password" class="form-control" placeholder="Password" required>
+          </div>
+          <button class="btn btn-lg btn-primary  btn-block btnSmallMargin" type="submit">Sign in</button>
+        </form>
+      </div>
+    </div>
+    <div class="col"></div>
   </div>
-  <button class="btn btn-lg  btn-block" type="submit">Sign in</button>
-</form>
+</div>
