--- a/src/app/service-dashboard/service-dashboard.component.html
+++ b/src/app/service-dashboard/service-dashboard.component.html
@@ -1,33 +1,43 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <a class="btn" (click)="logOut()">Logout</a>
-      <a class="btn" (click)="loggedInInfo()">My Info</a>
-      <h1 class="text-center">Dashboard</h1>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Customer</th>
-            <th>Status</th>
-            <th>Vehicle</th>
-            <th>Location</th>
-            <th>Assigned</th>
-            <th>Services</th>
-            <th>Created</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let order of orders" (click)="selectOrder(order._id)" style="cursor: pointer;">
-            <td>{{order.cusFirstName}} {{order.cusLastName}}</td>
-            <td>{{order.status | uppercase}}</td>
-            <td>{{order.cusCarMake}} {{order.cusCarModel}}, {{order.cusCarYear}}</td>
-            <td>{{order.location}}</td>
-            <td>{{order.cusAttendant}}</td>
-            <td><div *ngFor="let service of order.cusCarService">{{service.type}}</div></td>
-            <td>{{order.created_at | date:"medium"}}</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="card defaultCardStyle">
+        <h1 class="text-center headerFont"><strong>Dashboard</strong></h1>
+        <table class="table">
+          <thead class="goldBack">
+            <tr>
+              <th>Customer</th>
+              <th>Status</th>
+              <th>Vehicle</th>
+              <th>Location</th>
+              <th>Assigned</th>
+              <th>Services</th>
+              <th>Created</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let order of orders" (click)="selectOrder(order._id)" class="rowStyle">
+              <td>{{order.cusFirstName}} {{order.cusLastName}}</td>
+              <td *ngIf="order.status == 'pending'" class="pendingOrderStyle">{{order.status | uppercase}}</td>
+              <td *ngIf="order.status == 'in progress'" class="progressOrderStyle">{{order.status | uppercase}}</td>
+              <td *ngIf="order.status == 'waiting on customer'" class="waitCustomerOrderStyle">{{order.status | uppercase}}</td>
+              <td *ngIf="order.status == 'waiting on parts'" class="waitPartsOrderStyle">{{order.status | uppercase}}</td>
+              <td *ngIf="order.status == 'work complete'" class="workCompOrderStyle">{{order.status | uppercase}}</td>
+              <td>{{order.cusCarMake}} {{order.cusCarModel}}, {{order.cusCarYear}}</td>
+              <td>{{order.location}}</td>
+              <td>{{order.cusAttendant}}</td>
+              <td>
+                <span *ngFor="let service of order.cusCarService">
+                  <div *ngIf="service.status == 'pending'" class="pendingOrderStyle">{{service.type}}</div>
+                  <div *ngIf="service.status == 'complete'" class="workCompOrderStyle">{{service.type}}</div>
+                  <div *ngIf="service.status == 'recommended'" class="waitCustomerOrderStyle">{{service.type}}</div>
+                </span>
+              </td>
+              <td>{{order.created_at | date:"medium"}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
