--- a/src/app/user-signup/user-signup.component.html
+++ b/src/app/user-signup/user-signup.component.html
@@ -1,24 +1,41 @@
-<form class="form-signin" (ngSubmit)="onSubmit(f)" #f="ngForm">
-  <h2 class="form-signin-heading">Please sign up</h2>
-  <label for="ftName" class="sr-only">First Name</label>
-  <input type="text" id="fName" ngModel name="fName" class="form-control" placeholder="First Name" required>
-
-  <label for="lName" class="sr-only">Last Name</label>
-  <input type="text" id="lName" ngModel name="lName" class="form-control" placeholder="Last Name" required>
-
-  <label for="userRole" class="sr-only">User Role</label>
-  <select type="text" id="userRole" ngModel name="userRole" class="form-control" placeholder="User Role" required>
-    <option value="Admin">Admin</option>
-    <option value="Mechanic">Mechanic</option>
-  </select>
-  <label for="text" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" ngModel name="email" class="form-control" placeholder="Email address" required autofocus>
-
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" ngModel name="password" class="form-control" placeholder="Password" required>
-
-  <label for="inputPassword2" class="sr-only">Confirm Password</label>
-  <input type="password" id="inputPassword2" ngModel name="password2" class="form-control" placeholder="Confirm Password" required>
-
-  <button class="btn btn-lg  btn-block" type="submit">Sign Up</button>
-</form>
+<div class="container">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col-md-8">
+      <div class="card defaultCardStyle">
+        <form class="form-signin" (ngSubmit)="onSubmit(f)" #f="ngForm">
+          <h2 class="text-center headerFont"><strong>Employee Sign Up</strong></h2>
+          <div class="form-group">
+            <label for="fName"><strong>First Name:</strong></label>
+            <input type="text" id="fName" ngModel name="fName" class="form-control" placeholder="First Name" required autofocus>
+          </div>
+          <div class="form-group">
+            <label for="lName"><strong>Last Name:</strong></label>
+            <input type="text" id="lName" ngModel name="lName" class="form-control" placeholder="Last Name" required>
+          </div>
+          <div class="form-group">
+          <label for="userRole"><strong>User Role:</strong></label>
+            <select type="text" id="userRole" ngModel name="userRole" class="form-control" placeholder="User Role" required>
+              <option value="Admin">Admin</option>
+              <option value="Mechanic">Mechanic</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="text"><strong>Email Address:</strong></label>
+            <input type="email" id="inputEmail" ngModel name="email" class="form-control" placeholder="Email address" required>
+          </div>
+          <div class="form-group">
+            <label for="inputPassword"><strong>Password:</strong></label>
+            <input type="password" id="inputPassword" ngModel name="password" class="form-control" placeholder="Password" required>
+          </div>
+          <div class="form-group">
+            <label for="inputPassword2"><strong>Confirm Password:</strong></label>
+            <input type="password" id="inputPassword2" ngModel name="password2" class="form-control" placeholder="Confirm Password" required>
+          </div>
+          <button class="btn btn-lg  btn-block btn-primary" type="submit">Sign Up</button>
+        </form>
+      </div>
+    </div>
+    <div class="col"></div>
+  </div>
+</div>
