--- a/src/app/view-service-order/view-service-order-info/view-service-order-info.component.html
+++ b/src/app/view-service-order/view-service-order-info/view-service-order-info.component.html
@@ -1,35 +1,83 @@
-  <h2 class='text-center headerColor'>View Service Order</h2>
-  <h3 class="headerColor"><u>Customer Info</u></h3>
-  <h5>Name: {{orderInfo?.cusFirstName}} {{orderInfo?.cusLastName}}</h5>
-  <h5>Phone Number: {{orderInfo?.cusPhoneNumber}}</h5>
-  <h5>Email: {{orderInfo?.cusEmail}}</h5>
-  <h3 class="headerColor"><u>Current Services</u></h3>
-    <div *ngFor="let service of orderInfo?.cusCarService" >
-      <h5 class="greenColor"><li *ngIf="service.status == 'complete'">{{service.status | uppercase}}: {{service.type}}</li></h5>
-      <h5 class="blueColor"><li *ngIf="service.status == 'pending'">{{service.status | uppercase}}: {{service.type}}</li></h5>
-    </div>
-  <div *ngIf="currentServiceArr.length > 0">
-    <h3 class="headerColor"><u>Recommended Services</u></h3>
-    <div *ngFor="let service of orderInfo?.cusCarService" >
-      <h5 class="infoColor"><li *ngIf="service.status == 'recommended'">{{service.status | uppercase}}: {{service.type}}</li></h5>
-    </div>
-  </div>
-  <div *ngIf="declinedServiceArr.length > 0">
-    <h3 class="headerColor"><u>Declined Services</u></h3>
-    <div *ngFor="let service of orderInfo?.cusCarService" >
-      <h5 class="yellowColor"><li *ngIf="service.status == 'declined'">{{service.status | uppercase}}: {{service.type}}</li></h5>
-    </div>
-  </div>
-  <h3 class="headerColor"><u>General Info</u></h3>
-  <h5>Status: {{orderInfo?.status | uppercase}}</h5>
-  <h5>Make: {{orderInfo?.cusCarMake}}</h5>
-  <h5>Model: {{orderInfo?.cusCarModel}}</h5>
-  <h5>Year: {{orderInfo?.cusCarYear}}</h5>
-  <h5>Attendant: {{orderInfo?.cusAttendant}}</h5>
-  <h5>Location: {{orderInfo?.location}}</h5>
-  <h5>Notes:</h5>
-  <ul>
-    <li *ngFor="let note of orderNotes">{{note}}</li>
+<div *ngIf="toggleInfoView">
+  <ul class="nav nav-pills tabNavStyle">
+    <li class="nav-item">
+      <a class="nav-link pillStyle" (click)="toggleInfoView = false"><span class="pillColor">Cost</span></a>
+    </li>
   </ul>
-  <h5>Created: {{orderInfo?.created_at | date:"medium"}}</h5>
-  <h5>Last Update: {{orderInfo?.updatedAt | date:"medium"}}</h5>
+  <div class="card viewServiceOrderStyle">
+    <h2 class='text-center fireHeadColor headerFont'><strong>View Service Order</strong></h2>
+    <h3 class="headerColor headerFont"><u>Customer Info</u></h3>
+    <h5 class="bodyFont"><span class="bodyColor">Name: </span>{{orderInfo?.cusFirstName}} {{orderInfo?.cusLastName}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Phone Number: </span>{{orderInfo?.cusPhoneNumber}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Email: </span>{{orderInfo?.cusEmail}}</h5>
+    <div *ngIf="currentServiceArr.length > 0">
+      <h3 class="headerColor headerFont"><u>Current Services</u></h3>
+      <div *ngFor="let service of currentServiceArr">
+        <h5 *ngIf="service.status == 'complete'" class="greenColor statusFont"><li>{{service.status | uppercase}}: {{service.type}}</li></h5>
+        <h5 *ngIf="service.status == 'pending'" class="blueColor statusFont"><li>{{service.status | uppercase}}: {{service.type}}</li></h5>
+      </div>
+    </div>
+    <div *ngIf="recServiceArr.length > 0">
+      <h3 class="headerColor headerFont"><u>Recommended Services</u></h3>
+      <div *ngFor="let service of recServiceArr" >
+        <h5 class="infoColor statusFont"><li *ngIf="service.status == 'recommended'">{{service.status | uppercase}}: {{service.type}}</li></h5>
+      </div>
+    </div>
+    <div *ngIf="declinedServiceArr.length > 0">
+      <h3 class="headerColor headerFont"><u>Declined Services</u></h3>
+      <div *ngFor="let service of declinedServiceArr">
+        <h5 class="yellowColor statusFont"><li *ngIf="service.status == 'declined'">{{service.status | uppercase}}: {{service.type}}</li></h5>
+      </div>
+    </div>
+    <h3 class="headerColor headerFont"><u>General Info</u></h3>
+    <h5 class="bodyFont"><span class="bodyColor">Status: </span>{{orderInfo?.status | uppercase}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Make: </span>{{orderInfo?.cusCarMake}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Model: </span>{{orderInfo?.cusCarModel}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Year: </span>{{orderInfo?.cusCarYear}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Attendant: </span>{{orderInfo?.cusAttendant}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Location: </span>{{orderInfo?.location}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Notes:</span></h5>
+    <ul>
+      <li *ngFor="let note of orderNotes">{{note}}</li>
+    </ul>
+    <h5 class="bodyFont"><span class="bodyColor">Created: </span>{{orderInfo?.created_at | date:"medium"}}</h5>
+    <h5 class="bodyFont"><span class="bodyColor">Last Update: </span>{{orderInfo?.updatedAt | date:"medium"}}</h5>
+  </div>
+</div>
+<div *ngIf="!toggleInfoView">
+  <ul class="nav nav-pills tabNavStyle">
+    <li class="nav-item">
+      <a class="nav-link pillStyle" (click)="toggleInfoView = true"><span class="pillColor">Info</span></a>
+    </li>
+  </ul>
+  <div class="card viewServiceOrderStyle">
+    <h2 class='text-center fireHeadColor headerFont'><strong>View Cost Breakdown</strong></h2>
+    <h3 class="text-center headerColor headerFont"><u>Current Services</u></h3>
+      <div *ngFor="let service of currentServiceArr">
+              <h5 class="greenColor text-center priceFont"><li *ngIf="service.status == 'complete' || service.status == 'pending'">{{service.type}}- ${{service.price | number: "1.2-2"}}</li></h5>
+      </div>
+      <div *ngIf="recServiceArr.length > 0">
+        <hr>
+        <div class="text-center">
+          <h3 class="headerColor headerFont"><u>Recommended Services</u></h3>
+          <div *ngFor="let service of recServiceArr">
+            <h5 class="bodyColor priceFont"><li>{{service.type}}- ${{service.price | number: "1.2-2"}}</li></h5>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="text-center">
+        <h3 class="headerColor headerFont"><u>Tax</u></h3>
+        <h5 class="greenColor priceFont">Current Services @ 7.5%: ${{taxCurrent | number: "1.2-2"}}</h5>
+        <div *ngIf="recServiceArr.length > 0">
+          <h5 class="bodyColor priceFont">Current and Recommended Services @ 7.5%: ${{taxWithRec | number: "1.2-2"}}</h5>
+        </div>
+        <hr>
+        <h3 class="headerColor headerFont"><u>Total</u></h3>
+        <h5 class="greenColor priceFont">Current Services: ${{totalCost | number: "1.2-2"}}</h5>
+        <div *ngIf="recServiceArr.length > 0">
+          <h5 class="bodyColor priceFont">Current and Recommended Services: ${{totalCurrentAndRecCost | number: "1.2-2"}}</h5>
+        </div>
+    </div>
+  </div>
+</div>
