--- a/src/app/view-service-order/view-service-order-update/view-service-order-update.component.css
+++ b/src/app/view-service-order/view-service-order-update/view-service-order-update.component.css
@@ -1,11 +1,29 @@
 .viewServiceOrderStyle {
   background: rgb(245,245,245);
   padding: 10px;
-  margin-top: 15px;
   border-style: solid;
   border-width: 2px;
   border-color: black;
 }
 .headerColor {
   color: rgb(0,62,83);
+}
+.tabNavStyle {
+  margin-top: 15px;
+}
+.pillStyle {
+  cursor: pointer;
+  background: rgb(0,62,83);
+}
+.pillColor {
+  color: rgb(228,188,54);
+}
+.smTopMargin {
+  margin-top: 7px;
+}
+.smRightMargin {
+  margin-right: 5px;
+}
+.bodyFont {
+  font-family: 'Bree Serif', serif;
 }
