major front end update and add auth error msgs

--- a/src/app/customer-pending-work/customer-pending-work.component.html
+++ b/src/app/customer-pending-work/customer-pending-work.component.html
@@ -1,33 +1,39 @@
-<h1 class="text-center">Current Services In Progress</h1>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Mechanic</th>
-      <th>Status</th>
-      <th>Vehicle</th>
-      <th>Location</th>
-      <th>Ordered</th>
-      <th>Recommended</th>
-      <th>Created</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let order of pendingServices" (click)="selectOrder(order._id)" style="cursor: pointer;">
-      <td>{{order.cusAttendant}}</td>
-      <td>{{order.status | uppercase}}</td>
-      <td>{{order.cusCarMake}} {{order.cusCarModel}}, {{order.cusCarYear}}</td>
-      <td>{{order.location}}</td>
-      <td>
-        <div *ngFor="let service of order.cusCarService">
-          <div *ngIf="service.status == 'pending' || service.status == 'complete'">{{service.type}}</div>
-        </div>
-      </td>
-      <td>
-        <div *ngFor="let recService of order.cusCarService">
-          <div *ngIf="recService.status == 'recommended'">{{recService.type}}</div>
-        </div>
-      </td>
-      <td>{{order.created_at | date:"medium"}}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-md-12">
+    <div class="card defaultCardStyle">
+      <h1 class="text-center headerFont"><strong>Current Services In Progress</strong></h1>
+      <table class="table">
+        <thead class="goldBack">
+          <tr>
+            <th>Mechanic</th>
+            <th>Status</th>
+            <th>Vehicle</th>
+            <th>Location</th>
+            <th>Ordered</th>
+            <th>Recommended</th>
+            <th>Created</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let order of pendingServices" (click)="selectOrder(order._id)" class="rowStyle">
+            <td>{{order.cusAttendant}}</td>
+            <td>{{order.status | uppercase}}</td>
+            <td>{{order.cusCarMake}} {{order.cusCarModel}}, {{order.cusCarYear}}</td>
+            <td>{{order.location}}</td>
+            <td>
+              <div *ngFor="let service of order.cusCarService">
+                <div *ngIf="service.status == 'pending' || service.status == 'complete'">{{service.type}}</div>
+              </div>
+            </td>
+            <td>
+              <div *ngFor="let recService of order.cusCarService">
+                <div *ngIf="recService.status == 'recommended'">{{recService.type}}</div>
+              </div>
+            </td>
+            <td>{{order.created_at | date:"medium"}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
