--- a/src/app/view-customer-service-order/view-customer-service-order.component.html
+++ b/src/app/view-customer-service-order/view-customer-service-order.component.html
@@ -87,7 +87,7 @@
           <div class="text-center">
             <h3 class="headerColor"><u>Selected Services</u></h3>
             <div *ngFor="let service of selectedServicesArr">
-              <h5 class="infoColor"><li>{{service.type}}- ${{service.price | number: "1.2-2"}}}</li></h5>
+              <h5 class="infoColor"><li>{{service.type}}- ${{service.price | number: "1.2-2"}}</li></h5>
             </div>
           </div>
         </div>
